--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "momyne",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,5 +13,14 @@
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "description": "MOnitor MY NEtwork devices",
+  "main": "app.js",
+  "devDependencies": {},
+  "author": "gverni",
+  "license": "ISC",
+  "standard": {
+    "globals": [ ],
+    "env": [ ]
   }
 }
