--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "jsonfile": "^4.0.0",
     "morgan": "~1.9.0",
     "ping": "^0.2.2",
     "serve-favicon": "~2.4.5"
