--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "DEBUG=momyne:* node ./bin/www"
+    "start": "DEBUG=momyne:* node ./bin/www",
+    "postinstall": "./fetch_bootstrap.sh"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
